--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "spottets",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "casperjs": "^1.1.3",
+    "phantomjs": "^2.1.7"
+  },
+  "devDependencies": {
+    "lite-server": "^2.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/drewpchannel/ng2spotifyplayer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/drewpchannel/ng2spotifyplayer/issues"
+  },
+  "homepage": "https://github.com/drewpchannel/ng2spotifyplayer#readme",
+  "description": ""
 }
